Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -796,46 +796,46 @@
                 icon: "☀️",
                 songUrl: "iamyours.mp3",
                 photos: [
-                    { img: "photo5.jpeg", caption: "Beach Trip", emoji: "🏖️", color: "photo-gradient-2" },
-                    { img: "photo6.jpeg", caption: "Road Trip", emoji: "🚗", color: "photo-gradient-1" },
-                    { img: "photo9.jpeg", caption: "Ice Cream", emoji: "🍦", color: "photo-gradient-3" }
+                    { img: "photo5.jpeg", caption: "How to train your dragon",  color: "photo-gradient-2" },
+                    { img: "photo6.jpeg", caption: "hehehe",  color: "photo-gradient-1" },
+                    { img: "photo9.jpeg", caption: "money gonee", color: "photo-gradient-3" }
                 ]
             },
             {
                 title: "Cute You",
-                date: "Oct 5, 2023",
+                date: "",
                 icon: "🌙",
                 songUrl: "ificant.mp3",
                 photos: [
-                    { img: "photo10.jpeg", caption: "Movies", emoji: "🍿", color: "photo-gradient-4" },
-                    { img: "photo11.jpeg", caption: "Deep Talks", emoji: "💬", color: "photo-gradient-1" },
-                    { img: "photo12.jpeg", caption: "Cuddles", emoji: "🫂", color: "photo-gradient-2" },
-                    { img: "photo13.jpeg", caption: "Movies", emoji: "🍿", color: "photo-gradient-4" },
-                    { img: "photo14.jpeg", caption: "Deep Talks", emoji: "💬", color: "photo-gradient-1" },
-                    { img: "photo15.jpeg", caption: "Cuddles", emoji: "🫂", color: "photo-gradient-2" }
+                    { img: "photo10.jpeg", caption: "cutie1", emoji: , color: "photo-gradient-4" },
+                    { img: "photo11.jpeg", caption: "cutie2", emoji: "", color: "photo-gradient-1" },
+                    { img: "photo12.jpeg", caption: "cutie3", emoji: "", color: "photo-gradient-2" },
+                    { img: "photo13.jpeg", caption: "cutie4", emoji: "", color: "photo-gradient-4" },
+                    { img: "photo14.jpeg", caption: "cutie5", emoji: "", color: "photo-gradient-1" },
+                    { img: "photo15.jpeg", caption: "cutie6", emoji: "", color: "photo-gradient-2" }
                 ]
             },
             {
-                title: "Anniversary",
-                date: "Jan 15, 2024",
+                title: "Tayor's Concert",
+                date: "",
                 icon: "🧡",
                 songUrl: "divine.mp3",
                 photos: [
-                    { img: "photo16.jpeg", caption: "Cheers!", emoji: "🥂", color: "photo-gradient-1" },
-                    { img: "photo17.jpeg", caption: "Fancy Dinner", emoji: "🍝", color: "photo-gradient-3" },
-                    { img: "photo18.jpeg", caption: "Forever", emoji: "💑", color: "photo-gradient-4" }
+                    { img: "photo16.jpeg", caption: "Asthetics Win!", emoji: "🥂", color: "photo-gradient-1" },
+                    { img: "photo17.jpeg", caption: "We look cute", emoji: "", color: "photo-gradient-3" },
+                    { img: "photo18.jpeg", caption: "KAWAIII", emoji: "💑", color: "photo-gradient-4" }
                 ]
             },
             {
-                title: "Future Dreams",
+                title: "Wonderla",
                 date: "Coming Soon...",
                 icon: "🚀",
                 songUrl: "nights.mp3",
                 photos: [
-                    { img: "photo19.jpeg", caption: "Travel", emoji: "✈️", color: "photo-gradient-2" },
-                    { img: "photo20.jpeg", caption: "Our Home", emoji: "🏠", color: "photo-gradient-1" },
-                    { img: "photo21.jpeg", caption: "Adventures", emoji: "🏔️", color: "photo-gradient-3" },
-                    { img: "photo22.jpeg", caption: "Adventures", emoji: "🏔️", color: "photo-gradient-3" }
+                    { img: "photo19.jpeg", caption: "US TOGETHER", emoji: "", color: "photo-gradient-2" },
+                    { img: "photo20.jpeg", caption: "Cutest Memory", emoji: "", color: "photo-gradient-1" },
+                    { img: "photo21.jpeg", caption: "Cannot Forget", emoji: "", color: "photo-gradient-3" },
+                    { img: "photo22.jpeg", caption: "muwah", emoji: "", color: "photo-gradient-3" }
                 ]
             }
         ];
@@ -1148,3 +1148,4 @@
     </script>
 </body>
 </html>
+
